You can now play pig dice with two players. temporary score is added to permanent score on pass.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 		<div class="game">
 			<button id="roll" type="button" name="button">Roll Dice</button>
 			<button id="pass" type="button" name="button">Pass Turn</button>
-		</div>
+			<h4>Player 1: <span id="player1Total">0</span></h4>
+			<h4>Player 2: <span id="player2Total">0</span></h4>
 
+		</div>
 	</div>
 </body>
 </html>
