Added feedback to indicate current player's turn. fixed a bug involving passing turns on rolls of 1.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			<button id="pass" type="button" name="button">Pass Turn</button>
 			<h4>Player 1: <span id="player1Total">0</span></h4>
 			<h4>Player 2: <span id="player2Total">0</span></h4>
+			<h4>Temporary Score: <span id="tempScoreContainer">0</span></h4>
+			<h4>Last Roll: <span id="lastRoll"></span></h4>
+			<h4>It is <span id="yourTurn"></span>'s turn.</h4>
 
 		</div>
 	</div>
